# rl-trading-agent

./: .env.example  .gitignore  AGENTS.md  README.md  SYS 06 Backtesting Validacion 3.ipynb  WARP.md  ai_trading_agent_plan.ipynb  config.json  config.py  evaluate.py  framework.ipynb  garch_tester.py  pyproject.toml  requirements.txt  setup_environment.py  test_ai_live.py  test_phase1.py  trading_framework.py  trading_framework_dynamic.py  train.py
data/: agent.py  loader.py  utils.py
data_cache/: AAPL_1mo_1d_20250827.parquet  NVDA_5d_1d_20250827.parquet  QQQ_5d_1d_20250827.parquet  SPY_1d_1m_20250827.parquet  SPY_2mo_1d_20250827.parquet  SPY_2y_1d_20250827.parquet  SPY_3mo_1d_20250827.parquet  SPY_5d_1d_20250827.parquet  TSLA_5d_1d_20250827.parquet
docs/: PROJECT_STATUS.md  PROJECT_STATUS_UPDATED.md
notebooks/: ai_trading_agent_plan.ipynb  indicators.ipynb
rl_agent/: StrategyEnv.py
rl_trading_agent/src/: feature_engineering.py
scripts/: demo_phase2.py  demo_phase2_complete.py  demo_phase3.py  run_tests.py  setup.py
src/: trading_framework.ipynb
src/ai_trading_agent/: __init__.py  ai_client.py  backtesting_integration.py  config.py  data_manager.py  indicators.py  secrets.py  trading_engine.py  trading_signals.py
tests/: test_ai_live.py  test_data_agent.py  test_phase1.py  test_phase2.py  test_phase2_simple.py  test_phase3.py
